--- a/my-portfolio/src/components/projecten/AccordionMenu.css
+++ b/my-portfolio/src/components/projecten/AccordionMenu.css
@@ -102,6 +102,7 @@
     display: flex; 
     justify-content: center; 
     align-items: center;
+    text-align: justify;
     font-size: var(--normal-font-size);
     padding-bottom: 1.5rem;
 
